--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.1",
     "core-js": "^3.6.5",
