--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.1",
