--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "view-design": "^4.6.1",
     "vue": "^2.6.11",
     "vue-async-computed": "^3.9.0",
+    "vue-element-loading": "^2.0.2",
     "vue-flip-down": "1.0.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2",
